--- a/style.css
+++ b/style.css
@@ -1,3 +1,24 @@
-.myClassTestCommit {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+* {
+    padding: 0px;
+    margin: 0px;
+    background-color: #1f2937;
+}
+
+.header {
+    padding: 10px 90px 100px 60px;
+    margin: 0px 0px 100px 0px;
+    background-color: #1f2937;
+    border: #1f2937;
+    color: white;
+}
+
+
+button {
+    background-color: #3882f6;
+    color: white;
+}
+
+.placeholder{
+    background-color: gray;
+    font-size: 18px;
 }
