--- a/style.css
+++ b/style.css
@@ -8,11 +8,22 @@
     margin: 0px;
     background-color: #1f2937;
     border: #1f2937;
+     color: white;
+    font-size: 18px;
+    }
+
+ .link { 
     color: white;
     font-size: 18px;
     display: flex;
-    justify-content: flex-start;
+    justify-content: flex-end;
     gap: 15px;
+}
+
+.hl {
+    color: white;
+    display: flex;
+    justify-content: flex-start;
 }
 
 .hero {
@@ -23,7 +34,12 @@
     color: white;
     font-size: 18px;
 }
+
+.awesome {
+    font-size: 48px;
+    font-style: extra-bold;
 }
+
 
 button {
     background-color: #3882f6;
@@ -31,17 +47,41 @@ button {
 }
 
 .placeholder {
+    display: flex;
+    justify-content: center;
     padding: 10px 90px 100px 60px;
     margin: 0px;
     background-color: gray;
     font-size: 18px;
+
 }
 
 .middle {
     padding: 10px 90px 100px 60px;
     margin: 0px;
     background-color: white;
-    display: flex-row;
+}
+
+.header-text {
+    display: flex;
+    justify-content: center;
+    font-size: 36px;
+    font-style: extra-bold;
+    font: #1f2937;
+}
+
+.flex-random {
+    display: flex;
+    justify-content: flex-end;
+    gap:15px;
+    border: blue;
+}
+
+.img {
+    display: flex;
+    justify-content: space-between;
+    gap:15px;
+    border: blue;
 }
 
 .quote {
@@ -60,8 +100,9 @@ button {
 footer {
     padding: 10px 90px 100px 60px;
     margin: 0px;
-    
     background-color: #1f2937;
     border: #1f2937;
     color: white; 
+    display: flex;
+    justify-content: center;
 }
